# data-analysis-project-BBB

./: 00_setting.ipynb  01_preprocessiong.ipynb  02_basic_statistics copy.ipynb  02_basic_statistics.ipynb  02_visualization.ipynb  03_correlation_analysis.ipynb  03_correlation_statistics.ipynb  04_01_mashine_learning_price.ipynb  04_02_mashine_learning_R_score.ipynb  04_group_comparision.ipynb  05_machine_learning xgboost.ipynb  05_machine_learning.ipynb  05_machine_learning_price.ipynb  05_machine_learning_r_score.ipynb  260302_01.ipynb  add_review_scores.ipynb  add_review_scores_minus_TOP2.ipynb  main.py  only_review_scores.ipynb  only_review_scores_minus_TOP2.ipynb  price_corr_machine_XGBoost.ipynb  pyproject.toml
러신머닝 지옥/: only_review_scores_plus_feature_host.ipynb  only_review_scores_plus_feature_rate.ipynb  price_corr_machine.ipynb  price_corr_machine_XGBoost.ipynb  price_corr_machine_lightGBM copy.ipynb  price_corr_machine_lightGBM_last.ipynb
러신머닝지옥/: only_review_scores_lightGBM.ipynb  only_review_scores_plus_feature_host.ipynb  only_review_scores_plus_feature_time.ipynb  price_corr_machine_lightGBM_last.ipynb
