[project]
name = "data-analysis-project-bbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests==2.31.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "my-project",
]
