[project]
name = "data-analysis-project-bbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "requests==2.31.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
]

[tool.uv.workspace]
members = [
    "my-project",
]
