[project]
name = "data-analysis-project-bbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "folium>=0.20.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "requests==2.31.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    "my-project",
]
